// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`criteria are required 1`] = `
{
  "_errors": [],
  "eligibleCriteria": {
    "_errors": [],
    "usNdImpliedValidEarlyTerminationSentenceType": {
      "_errors": [
        "Required",
      ],
    },
    "usNdImpliedValidEarlyTerminationSupervisionLevel": {
      "_errors": [
        "Required",
      ],
    },
    "usNdNotInActiveRevocationStatus": {
      "_errors": [
        "Required",
      ],
    },
  },
}
`;

exports[`eligibleCriteria must not be empty 1`] = `
{
  "_errors": [],
  "eligibleCriteria": {
    "_errors": [],
    "usNdImpliedValidEarlyTerminationSentenceType": {
      "_errors": [],
      "supervisionType": {
        "_errors": [
          "Required",
        ],
      },
    },
    "usNdImpliedValidEarlyTerminationSupervisionLevel": {
      "_errors": [],
      "supervisionLevel": {
        "_errors": [
          "Required",
        ],
      },
    },
    "usNdNotInActiveRevocationStatus": {
      "_errors": [],
      "revocationDate": {
        "_errors": [
          "Required",
        ],
      },
    },
  },
}
`;

exports[`ineligiibleCriteria 1`] = `
{
  "data": {
    "eligibleCriteria": {
      "supervisionPastEarlyDischargeDate": {
        "eligibleDate": 2022-01-03T00:00:00.000Z,
      },
      "usNdImpliedValidEarlyTerminationSentenceType": {
        "supervisionType": "PROBATION",
      },
      "usNdImpliedValidEarlyTerminationSupervisionLevel": {
        "supervisionLevel": "MEDIUM",
      },
      "usNdNotInActiveRevocationStatus": {
        "revocationDate": null,
      },
    },
    "externalId": "abc123",
    "formInformation": {
      "clientName": "Firstname Lastname",
      "convictionCounty": "Bloom",
      "crimeNames": [
        "Crime1",
        "crime2",
      ],
      "criminalNumber": "123456",
      "judgeName": "Judgename",
      "judicialDistrictCode": "XX",
      "priorCourtDate": 2022-01-01T00:00:00.000Z,
      "probationExpirationDate": 2024-05-01T00:00:00.000Z,
      "probationOfficerFullName": "Fakename Officername",
      "sentenceLengthMonths": 24,
    },
    "ineligibleCriteria": {
      "supervisionPastEarlyDischargeDate": {
        "eligibleDate": 2024-01-03T00:00:00.000Z,
      },
    },
    "metadata": {
      "ICOut": false,
      "multipleSentences": false,
      "outOfState": false,
    },
    "stateCode": "US_OZ",
  },
  "success": true,
}
`;

exports[`must not have revocation date 1`] = `
{
  "_errors": [],
  "eligibleCriteria": {
    "_errors": [],
    "usNdNotInActiveRevocationStatus": {
      "_errors": [],
      "revocationDate": {
        "_errors": [
          "Expected null, received string",
        ],
      },
    },
  },
}
`;

exports[`transform record 1`] = `
{
  "eligibleCriteria": {
    "supervisionPastEarlyDischargeDate": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
    "usNdImpliedValidEarlyTerminationSentenceType": {
      "supervisionType": "PROBATION",
    },
    "usNdImpliedValidEarlyTerminationSupervisionLevel": {
      "supervisionLevel": "MEDIUM",
    },
    "usNdNotInActiveRevocationStatus": {
      "revocationDate": null,
    },
  },
  "externalId": "abc123",
  "formInformation": {
    "clientName": "Firstname Lastname",
    "convictionCounty": "Bloom",
    "crimeNames": [
      "Crime1",
      "crime2",
    ],
    "criminalNumber": "123456",
    "judgeName": "Judgename",
    "judicialDistrictCode": "XX",
    "priorCourtDate": 2022-01-01T00:00:00.000Z,
    "probationExpirationDate": 2024-05-01T00:00:00.000Z,
    "probationOfficerFullName": "Fakename Officername",
    "sentenceLengthMonths": 24,
  },
  "ineligibleCriteria": {},
  "metadata": {
    "ICOut": false,
    "multipleSentences": false,
    "outOfState": false,
  },
  "stateCode": "US_OZ",
}
`;
